fix:fix lang-list z-index

--- a/src/components/css/Controls.css
+++ b/src/components/css/Controls.css
@@ -91,6 +91,7 @@
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 5px;
     transition: .3s ease-in-out;
+    z-index: 4;
 }
 
 .hidden-list {
